--- a/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/dashboard/product-orders/product-orders.component.html
+++ b/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/dashboard/product-orders/product-orders.component.html
@@ -51,14 +51,13 @@
         <td mat-cell *matCellDef="let element"> {{element.arrivalDate}} </td>
       </ng-container>
 
-
       <ng-container matColumnDef="actions">
         <th class="pl-3" mat-header-cell *matHeaderCellDef mat-sort-header>ACTIONS </th>
         <td mat-cell *matCellDef="let element;">
-          <button mat-icon-button (click)="updateSchedule(element['orderId'])">
+          <button mat-icon-button matTooltip="Update schedule" (click)="updateSchedule(element['orderId'])">
             <mat-icon>launch</mat-icon>
           </button>
-          <button mat-icon-button color="warn" (click)="deleteOrder(element['orderId'])">
+          <button mat-icon-button matTooltip="Delete order" color="warn" (click)="deleteOrder(element['orderId'])">
             <mat-icon>delete_outline</mat-icon>
           </button>
         </td>
@@ -98,7 +97,9 @@
           <mat-spinner diameter=40 style="margin-left:130%;"></mat-spinner>
         </td>
       </tr>
+
     </table>
+    
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
   </div>
 
