--- a/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/user-management/signup/signup.component.html
+++ b/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/user-management/signup/signup.component.html
@@ -8,125 +8,130 @@
 
         <h3>SignUp</h3>
 
-    <form #userForm="ngForm" (ngSubmit)='onSubmit(userForm.value)'>
+        <form #userForm="ngForm" (ngSubmit)='onSubmit(userForm.value)'>
 
-        <div class="form-group">
+            <div class="form-group">
 
-            <label>UserId: </label>
+                <label>UserId: </label>
 
-            <input required minlength="1" type="number" #useridRef='ngModel' name="userid" ngModel class="form-control">
+                <input required minlength="1" type="number" #useridRef='ngModel' name="userid" ngModel
+                    class="form-control">
 
-            <div *ngIf='useridRef.errors && useridRef.touched' class="alert alert-danger">
+                <div *ngIf='useridRef.errors && useridRef.touched' class="alert alert-danger">
 
-                <div [hidden]='!useridRef.errors.required'> Provide User Id </div>
+                    <div [hidden]='!useridRef.errors.required'> Provide User Id </div>
 
+                </div>
             </div>
-        </div>
 
 
-        <div class="form-group">
+            <div class="form-group">
 
-            <label>UserName: </label>
+                <label>UserName: </label>
 
-            <input required minlength="6" type="text" #usernameRef='ngModel' name="username" ngModel class="form-control">
+                <input required minlength="6" type="text" #usernameRef='ngModel' name="username" ngModel
+                    class="form-control">
 
-            <div *ngIf='usernameRef.errors
+                <div *ngIf='usernameRef.errors
                         && usernameRef.touched' class="alert alert-danger">
 
-                <div [hidden]='!usernameRef.errors.required'>
+                    <div [hidden]='!usernameRef.errors.required'>
 
-                    Provide User Name
+                        Provide User Name
+
+                    </div>
+
+                    <div *ngIf='usernameRef.errors.pattern'>Name should be minimum of 6 characters length</div>
 
                 </div>
 
-                <div *ngIf='usernameRef.errors.pattern'>Name should be minimum of 6 characters length</div>
-
             </div>
 
-        </div>
 
-        
-        <div class="form-group">
+            <div class="form-group">
 
-            <label>UserPassword: </label>
+                <label>UserPassword: </label>
 
-            <input required minlength="6" type="password" #userpasswordRef='ngModel' name="userpassword" ngModel class="form-control">
+                <input required minlength="6" type="password" #userpasswordRef='ngModel' name="userpassword" ngModel
+                    class="form-control">
 
-            <div *ngIf='userpasswordRef.errors
+                <div *ngIf='userpasswordRef.errors
                         && userpasswordRef.touched' class="alert alert-danger">
 
-                <div [hidden]='!userpasswordRef.errors.required'>
+                    <div [hidden]='!userpasswordRef.errors.required'>
 
-                    Provide User Password
+                        Provide User Password
+
+                    </div>
+
 
                 </div>
 
-        
             </div>
 
-        </div>
+            <div class="form-group">
 
-        <div class="form-group">
+                <label>UserType:(customer) </label>
 
-            <label>UserType:(customer) </label>
+                <input required minlength="6" type="text" #usertypeRef='ngModel' name="usertype" ngModel
+                    class="form-control">
 
-            <input required minlength="6" type="text" #usertypeRef='ngModel' name="usertype" ngModel class="form-control">
-
-            <div *ngIf='usertypeRef.errors
+                <div *ngIf='usertypeRef.errors
                         && usertypeRef.touched' class="alert alert-danger">
 
-                <div [hidden]='!usertypeRef.errors.required'>
+                    <div [hidden]='!usertypeRef.errors.required'>
 
-                    Provide User Type
+                        Provide User Type
+
+                    </div>
+
+                    <div *ngIf='usertypeRef.errors.pattern'>Name should be minimum of 6 characters length</div>
 
                 </div>
 
-                <div *ngIf='usertypeRef.errors.pattern'>Name should be minimum of 6 characters length</div>
+            </div>
+            <div class="form-group">
 
+                <label>User PhoneNumber: </label>
+
+                <input required type="number" pattern="^((\\+91-?)|0)?[0-9]{10}$" #userphoneRef='ngModel'
+                    name="userphone" ngModel class="form-control">
+
+                <div *ngIf='userphoneRef.errors && userphoneRef.touched' class="alert alert-danger">
+
+                    <div [hidden]='!userphoneRef.errors.required'> Provide User Phone Number </div>
+
+                    <div *ngIf='userphoneRef.errors.pattern'>Phone number should consists of 10 digits</div>
+
+                </div>
             </div>
 
-        </div>
-        <div class="form-group">
+            <div class="form-group">
 
-            <label>User PhoneNumber: </label>
+                <label>User EmailID: </label>
 
-            <input required  type="number"  pattern="^((\\+91-?)|0)?[0-9]{10}$" #userphoneRef='ngModel' name="userphone" ngModel class="form-control">
+                <input required minlength="6" type="text" #useremailRef='ngModel' name="useremail" ngModel
+                    class="form-control">
 
-            <div *ngIf='userphoneRef.errors && userphoneRef.touched' class="alert alert-danger">
-
-                <div [hidden]='!userphoneRef.errors.required'> Provide User Phone Number </div>
-
-                <div *ngIf='userphoneRef.errors.pattern'>Phone number should consists of 10 digits</div>
-
-            </div>
-        </div>
-
-        <div class="form-group">
-
-            <label>User EmailID: </label>
-
-            <input required minlength="6" type="text" #useremailRef='ngModel' name="useremail" ngModel
-                class="form-control">
-
-            <div *ngIf='useremailRef.errors
+                <div *ngIf='useremailRef.errors
                         && useremailRef.touched' class="alert alert-danger">
 
-                <div [hidden]='!useremailRef.errors.required'>
+                    <div [hidden]='!useremailRef.errors.required'>
 
-                    Provide User MailID
+                        Provide User MailID
 
+                    </div>
                 </div>
+
             </div>
+            <input [disabled]="userForm.invalid" type="submit" value="SignUp" class="btn btn-primary">
 
-        </div>
-        <input [disabled]="userForm.invalid" type="submit"   value="SignUp" class="btn btn-primary">
+        </form>
 
-    </form>
+    </div>
 
-</div>
-
- <div align="center">
-    <h2>{{message}}</h2>
-</div>
+    <div align="center">
+        <h2>{{message}}</h2>
+    </div>
 
 </div>
